<resources>
    <string name="app_name">Survey App</string>
    <string name="welcome">Welcome</string>
    <string name="start_survey">Start survey</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="questions_submitted">Questions submitted:</string>
    <string name="type_here_for_an_answer">Type here for an answer...</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Question</string>
</resources>